# formidant

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: pr_check.yml  release.yml
demo/: manage.py  orders.py  settings.py  signup.py  urls.py
demo/templates/: base.html  orders.html  signup.html  welcome.html
docs/design/: formidant.md
formidant/: __init__.py
formidant/core/: binding.py  bound.py  constants.py  errors.py  exceptions.py  files.py  flatten.py  form_types.py  introspect.py  meta.py  protocol.py  rendering.py  widgets.py
formidant/core/templates/: field.html  form.html
formidant/core/templates/widgets/: checkbox.html  checkbox_group.html  fieldset.html  file.html  input.html  repeat.html  repeat_row.html  select.html
formidant/django/: __init__.py  adapter.py  apps.py  views.py
formidant/django/templatetags/: formidant.py
tests/: test_package.py  utils.py
tests/core/: test_binding.py  test_bound_form.py  test_boundaries.py  test_flatten.py  test_render.py  test_roundtrip.py  test_widgets.py
tests/demo/: test_demo_app.py
tests/django/: settings.py  test_bind.py  test_bind_view.py  test_boundaries.py  test_form_view.py  test_interop.py  test_security.py  test_template_tags.py
tests/django/templates/: test_form.html
