[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "formidant"
module-root = ""

[project]
name = "formidant"
version = "0.0.1.dev"
description = "Pydantic-powered web forms: binding, bound-form lifecycle, and server-side rendering"
authors = [
    {name = "Mike O'Donnell", email = "mike@devferret.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
keywords = ["pydantic", "forms", "django", "html", "htmx"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.13,<3",
    "jinja2>=3.1,<4",
]

[project.urls]
Homepage = "https://github.com/mwodonnell/formidant"
Repository = "https://github.com/mwodonnell/formidant"

[project.optional-dependencies]
dev = [
    "pre-commit>=4.1.0",
    "ruff==0.14.2",
]
test = [
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "coverage==7.15.2",
    "hypothesis==6.160.0",
    "pytest-django==4.12.0",
    "django==6.0.7",
    "django-ninja==1.6.2",
    "email-validator==2.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--verbose",
    "--cov=formidant",
    "--cov-report=term-missing",
    "--cov-report=html",
]
